added functionality so that when you look up a pic of the day, it automatically takes you to the picture using an anchor link

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 header {
-  background-image: url("../img/asteroid4_3.jpg");
+  background-image: url("../img/asteroid_cover.jpg");
   background-size: cover;
   /* background-repeat: no-repeat; */
 } 
